@@ -63,10 +63,10 @@ export class SshCertificateImportFormPageComponent extends BaseFormPageComponent
         }
       },
       {
-        type: 'textInput',
+        type: 'tagInput',
         name: 'comment',
         value: '',
-        label: gettext('Comment'),
+        label: gettext('Tags'),
         validators: {
           required: true
         }
