@@ -8,6 +8,9 @@ openmediavault (6.7.1-1) stable; urgency=low
 
   * Update locale files.
   * Various improvements.
+  * Change the `Comment` fields in the `System | Certificates | SSL`
+    and `System | Certificates | SSH` pages to `Tags`.
+  * Issue #1586: Various improvements in SSL cert management.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 26 Aug 2023 17:11:41 +0200
 
